<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments"
    app:startDestination="@id/menuItems">

    <fragment
        android:id="@+id/menuItems"
        android:name="hr.algebra.android.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.android.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/menuMap"
        android:name="hr.algebra.android.MapsFragment"
        android:label="@string/Map"
        tools:layout="@layout/fragment_maps" />

</navigation>